{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 18,
  "lineage": "4c5c94f5-82d0-f836-be0d-70b77c90f85f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/azdevops-lb/frontendIPConfigurations/azdevops-load-balancer-frontend",
                "name": "azdevops-load-balancer-frontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/azdevops-pubip"
              }
            ],
            "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/azdevops-lb",
            "location": "eastus",
            "name": "azdevops-lb",
            "resource_group_name": "Azuredevops",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "project": "udacity-webserver"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/backend-adress-pool",
            "loadbalancer_id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/azdevops-lb",
            "name": "backend-adress-pool"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/azdevops-nic0",
            "internal_domain_name_suffix": "lctlnt5dsdlunj1ri4txuwryic.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/azdevops-network/subnets/internal"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "azdevops-nic0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "project": "udacity-webserver"
            }
          },
          "dependencies": [
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/azdevops-nic1",
            "internal_domain_name_suffix": "lctlnt5dsdlunj1ri4txuwryic.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/azdevops-network/subnets/internal"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "azdevops-nic1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "project": "udacity-webserver"
            }
          },
          "dependencies": [
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/backend-adress-pool",
            "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/azdevops-nic0/ipConfigurations/internal|/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/backend-adress-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/azdevops-nic0"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/backend-adress-pool",
            "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/azdevops-nic1/ipConfigurations/internal|/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/backend-adress-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/azdevops-nic1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/azdevops-nsg",
            "location": "eastus",
            "name": "azdevops-nsg",
            "resource_group_name": "Azuredevops",
            "security_rule": [],
            "tags": {
              "project": "udacity-webserver"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "description-ssh",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/azdevops-nsg/securityRules/allow-internal",
            "name": "allow-internal",
            "network_security_group_name": "azdevops-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "10.0.0.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "10.0.0.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/azdevops-nsg/securityRules/deny-internet",
            "name": "deny-internet",
            "network_security_group_name": "azdevops-nsg",
            "priority": 200,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/azdevops-pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.178.70.139",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "azdevops-pubip",
            "resource_group_name": "Azuredevops",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "project": "udacity-webserver"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/azdevops-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Azuredevops",
            "virtual_network_name": "azdevops-network"
          },
          "dependencies": [
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cfb6a658-90e3-46d7-a771-47a77a5a3842",
            "id": "/subscriptions/c9f1e8cb-24a3-405b-9046-bf2b34125d0c/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/azdevops-network",
            "location": "eastus",
            "name": "azdevops-network",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "Azuredevops",
            "tags": {
              "project": "udacity-webserver"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}